3.3
	+ Switch from Error to TryCatch for exception handling
	+ Delete migration code from old versions
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.3
	+ Override daemons when migrating from 3.0
3.1.2
	+ Skip internal users in printer permissions
3.1.1
	+ Added menu icon
	+ Adapt firewall rules to new accept chains
	+ Updated to use the new security group concept.
3.1
	+ Removed 3.0.X migration code
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.3
	+ Modified printers are updated in the printers table
	+ Print correctly utf8 characters in printer's name, location and description
3.0.2
	+ Change cups daemon type from init.d to upstart
	+ Changes required by new samba4 bundled package
3.0.1
	+ Fixed LogHelper, log events with unknown printer or user
2.3.9
	+ Move report code to remoteservices
2.3.8
	+ Add precondition to printers model to check that samba s3fs
	  fileserver is used.
2.3.7
	+ New model to manage printer permissions
2.3.6
	+ Adapted to new Model management framework
	+ Make CUPS listen also in virtual interfaces
2.3.5
	+ Create tables with MyISAM engine by default
2.3.4
	+ Disable enable-module actions until fixed
2.3.3
	+ Packaging fixes for precise
2.3.2
	+ Service name is now translatable
2.3.1
	+ Updated Standards-Version to 3.9.2
2.3
	+ Adapted to new MySQL logs backend
	+ Replaced autotools with zbuildtools
	+ Fixed bug which inserted log lines with printer and/or user NULL
2.1.6
	+ General CUPS parameters set in the CUPS web interface are preserved
2.1.5
	+ Removed /zentyal prefix from URLs
	+ Avoid duplicated restart during postinst
2.1.4
	+ Fixed argument passing in constructor, readonly instances now work
2.1.3
	+ Use upstream init.d script instead of custom upstart one
2.1.2
	+ Enable CUPS by default on internal interfaces
	+ Use quote column option for periodic and report log consolidation
2.1.1
	+ Remove unnecessary code from CUPS::syncRows
2.1