@@ -107,26 +107,26 @@ sub _table
 #            states => {
 #                provisioned => {
 #                    name => 'deprovision',
-#                    printableValue => __('Deprovision'),
+#                    printableValue => __('Unconfigure'),
 #                    handler => \&_doDeprovision,
-#                    message => __('Database deprovisioned'),
+#                    message => __('Database unconfigured'),
 #                    enabled => sub { $self->parentModule->isEnabled() },
 #                },
 #                notProvisioned => {
 #                    name => 'provision',
-#                    printableValue => __('Provision'),
+#                    printableValue => __('Setup'),
 #                    handler => \&_doProvision,
-#                    message => __('Database provisioned'),
+#                    message => __('Database configured'),
 #                    enabled => sub { $self->parentModule->isEnabled() },
 #                },
 #            }
 #        ),
         new EBox::Types::Action(
             name           => 'provision',
-            printableValue => __('Provision'),
+            printableValue => __('Setup'),
             model          => $self,
             handler        => \&_doProvision,
-            message        => __('Database provisioned'),
+            message        => __('Database configured'),
             enabled        => sub { not $self->parentModule->isProvisioned() },
         ),
     ];
@@ -134,13 +134,13 @@ sub _table
 
     my $dataForm = {
         tableName          => 'Provision',
-        printableTableName => __('Provision'),
+        printableTableName => __('Setup'),
         pageTitle          => __('OpenChange Server Provision'),
         modelDomain        => 'OpenChange',
         #defaultActions     => [ 'editField' ],
         customActions      => $customActions,
         tableDescription   => \@tableDesc,
-        help               => __('Provisions an OpenChange Groupware server.'),
+        help               => __('Setup an OpenChange Groupware server.'),
     };
 
     return $dataForm;
