@@ -1,4 +1,6 @@
 3.3
+	+ Renamed printableName to File Sharing and Domain Services
+	+ Split settings in two menu entries: Domain and File Sharing
 	+ Switch from Error to TryCatch for exception handling
 	+ Provision - Improve the LDAP OUs purge after join domain
 	+ s4sync - Serveral fixes to make it more robust
